x1499 changing how blocks are represented
Previously info about a *block* was stored in a slot/sample link table
with an int for the highest section taken from the block. Block labware
was required to have exactly one slot and exactly one sample.
In the future we will support labware representing a block with
multiple samples in, where each sample may be spread across multiple
slots.
We represent that by marking a *sample* as a block by it having a
non-null blockHighestSection field. Labware can contain multiple
block-samples. Block-samples can be shared across multiple slots
in a piece of labware.

This commit has a small change to the graphql schema but other outward
facing behaviour should be largely unchanged.